Complete Tic-Tac-Toe Bare Minimum Requirements

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
       border: 1px solid grey;
     }
     #winner {
-      margin-top: 100px;
+      margin-top: 80px;
       text-align: center;
+    }
+    .button {
+      margin-top: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   </style>
 
@@ -51,6 +57,9 @@
 </table>
 <span id='round'>Round : 0</span>
 <div id='winner'>Have Fun!</div>
+<div class='button'>
+  <button>Reset Game</button>
+</div>
 <script src="app.js"></script>
 </body>
 </html>
